--- a/requirements.txt
+++ b/requirements.txt
@@ -39,4 +39,5 @@ urllib3 == 1.26.14
 datasets == 2.9.0
 evaluate == 0.4.0
 scikit-learn == 1.2.1
-adapter-transformers
+adapter-transformers == 3.1.0
+wandb == 0.13.10
