--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.26.1
+accelerate==0.27.2
 adapter-transformers==3.2.1.post0
 aiohttp==3.9.3
 aiosignal==1.3.1
@@ -8,40 +8,40 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.32
+awscli==1.32.50
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.32
-catalogue==2.0.10
-certifi==2023.11.17
+botocore==1.34.50
+catalogue==2.1.0
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.16.0
-cmake==3.25.2
-colorama==0.4.4
+cloudpathlib==0.18.0
+cmake==3.28.3
+colorama==0.4.6
 coloredlogs==15.0.1
-confection==0.1.4
+confection==0.1.5a0
 contourpy==1.2.0
-coverage==7.4.1
+coverage==7.4.3
 cycler==0.12.1
 cymem==2.0.8
-datasets==2.16.1
-dill==0.3.6
+datasets==2.17.1
+dill==0.3.8
 docker-pycreds==0.4.0
 docstring-parser==0.15
-docutils==0.16
+docutils==0.20.1
 evaluate==0.4.1
-filelock==3.9.0
-flake8==6.0.0
-fonttools==4.47.2
+filelock==3.13.1
+flake8==7.0.0
+fonttools==4.49.0
 frozenlist==1.4.1
-fsspec==2023.12.2
+fsspec==2024.2.0
 gitdb==4.0.11
-GitPython==3.1.41
+GitPython==3.1.42
 huggingface-hub==0.20.3
 humanfriendly==10.0
 hydra-core==1.3.2
-idna==3.4
+idna==3.6
 imagesize==1.4.1
 Jinja2==3.1.3
 jmespath==1.0.1
@@ -50,76 +50,76 @@ kiwisolver==1.4.5
 langcodes==3.3.0
 lightning-utilities==0.10.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.4
-matplotlib==3.8.2
+MarkupSafe==2.1.5
+matplotlib==3.8.3
 mccabe==0.7.0
 mdurl==0.1.2
-mpmath==1.2.1
-multidict==6.0.4
-multiprocess==0.70.14
+mpmath==1.4.0a0
+multidict==6.0.5
+multiprocess==0.70.16
 murmurhash==1.0.10
-networkx==3.0
+networkx==3.2.1
 nltk==3.8.1
-numpy==1.26.3
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
+numpy==1.26.4
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cublas-cu12==12.3.4.1
+nvidia-cuda-cupti-cu12==12.3.101
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-nvrtc-cu12==12.3.107
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cuda-runtime-cu12==12.3.101
+nvidia-cudnn-cu11==8.9.6.50
+nvidia-cudnn-cu12==8.9.7.29
+nvidia-cufft-cu12==11.0.12.1
+nvidia-curand-cu12==10.3.4.107
+nvidia-cusolver-cu12==11.5.4.101
+nvidia-cusparse-cu12==12.2.0.103
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.1.105
-omegaconf==2.4.0.dev1
-optimum==1.16.2
-packaging==23.0
-pandas==2.2.0
+nvidia-nvtx-cu12==12.3.101
+omegaconf==2.4.0.dev2
+optimum==1.17.1
+packaging==23.2
+pandas==2.2.1
 pathtools==0.1.2
 peft==0.8.2
 pillow==10.2.0
-preshed==3.0.9
-prettytable==3.9.0
-protobuf==4.25.2
+preshed==4.0.0
+prettytable==3.10.0
+protobuf==5.26.0rc2
 psutil==5.9.8
 pyarrow==15.0.0
 pyarrow-hotfix==0.6
 pyasn1==0.5.1
-pycodestyle==2.10.0
-pydantic==2.6.0
-pydantic_core==2.16.1
-pyflakes==3.0.1
+pycodestyle==2.11.1
+pydantic==2.6.2
+pydantic_core==2.16.3
+pyflakes==3.2.0
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
-pytorch-lightning==2.1.3
+pytorch-lightning==2.2.0.post0
 pytorch-triton==0.0.1
-pytz==2023.4
+pytz==2024.1
 PyYAML==6.0.1
 regex==2023.12.25
-requests==2.28.2
-responses==0.18.0
+requests==2.31.0
+responses==0.25.0
 rich==13.7.0
-rsa==4.7.2
+rsa==4.9
 s3transfer==0.10.0
 safetensors==0.4.2
-scikit-learn==1.4.0
+scikit-learn==1.4.1.post1
 scipy==1.12.0
-sentencepiece==0.1.99
-sentry-sdk==1.40.0
+sentencepiece==0.2.0
+sentry-sdk==2.0.0a1
 setproctitle==1.3.3
-shtab==1.6.5
+shtab==1.7.0
 six==1.16.0
 small-text==1.3.3
-smart-open==6.4.0
-smmap==5.0.1
+smart-open==7.0.1
+smmap==6.0.0
 snowballstemmer==2.2.0
 spacy==4.0.0.dev2
 spacy-legacy==4.0.0.dev1
@@ -134,24 +134,25 @@ sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12
 thinc==9.0.0.dev4
-threadpoolctl==3.2.0
-tokenizers==0.15.1
-torch==2.2.0
+threadpoolctl==3.3.0
+tokenizers==0.15.2
+torch==2.2.1
 torch-nested==0.0.5
-torchmetrics==1.3.0.post0
-torchvision==0.17.0
-tqdm==4.66.1
-transformers==4.37.2
+torchmetrics==1.3.1
+torchvision==0.17.1
+tqdm==4.66.2
+transformers==4.38.1
 triton==2.2.0
-trl==0.7.10
+trl==0.7.11
 typer==0.9.0
-typing_extensions==4.9.0
-tyro==0.7.0
-tzdata==2023.4
-urllib3==1.26.18
-wandb==0.16.2
+typing_extensions==4.10.0
+tyro==0.7.3
+tzdata==2024.1
+urllib3==2.2.1
+wandb==0.16.3
 wasabi==1.1.2
 wcwidth==0.2.13
 weasel==0.3.4
+wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
