--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ aiosignal==1.3.1
 alabaster==0.7.16
 alipy==1.2.5
 annotated-types==0.6.0
-antlr4-python3-runtime==4.13.1
+antlr4-python3-runtime==4.9.3
 appdirs==1.4.4
 attrs==23.2.0
 awscli==1.32.54
@@ -77,7 +77,7 @@ nvidia-cusparse-cu12==12.2.0.103
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.3.101
-omegaconf==2.4.0.dev3
+omegaconf==2.3.0
 optimum==1.17.1
 packaging==23.2
 pandas==2.2.1
