--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.54
+awscli==1.32.57
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.54
+botocore==1.34.57
 catalogue==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -38,7 +38,7 @@ frozenlist==1.4.1
 fsspec==2024.2.0
 gitdb==4.0.11
 GitPython==3.1.42
-huggingface-hub==0.21.3
+huggingface-hub==0.21.4
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.6
@@ -62,21 +62,21 @@ networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
 nvidia-cublas-cu11==11.11.3.6
-nvidia-cublas-cu12==12.3.4.1
-nvidia-cuda-cupti-cu12==12.3.101
+nvidia-cublas-cu12==12.4.2.65
+nvidia-cuda-cupti-cu12==12.4.99
 nvidia-cuda-nvrtc-cu11==11.8.89
-nvidia-cuda-nvrtc-cu12==12.3.107
+nvidia-cuda-nvrtc-cu12==12.4.99
 nvidia-cuda-runtime-cu11==11.8.89
-nvidia-cuda-runtime-cu12==12.3.101
+nvidia-cuda-runtime-cu12==12.4.99
 nvidia-cudnn-cu11==8.9.6.50
 nvidia-cudnn-cu12==8.9.7.29
-nvidia-cufft-cu12==11.0.12.1
-nvidia-curand-cu12==10.3.4.107
-nvidia-cusolver-cu12==11.5.4.101
-nvidia-cusparse-cu12==12.2.0.103
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.3.101
+nvidia-cufft-cu12==11.2.0.44
+nvidia-curand-cu12==10.3.5.119
+nvidia-cusolver-cu12==11.6.0.99
+nvidia-cusparse-cu12==12.3.0.142
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu12==12.4.99
 omegaconf==2.4.0.dev3
 optimum==1.17.1
 packaging==23.2
@@ -96,10 +96,10 @@ pydantic==2.6.3
 pydantic_core==2.16.3
 pyflakes==3.2.0
 Pygments==2.17.2
-pyparsing==3.1.1
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytorch-lightning==2.2.0.post0
+pytorch-lightning==2.2.1
 pytorch-triton==0.0.1
 pytz==2024.1
 PyYAML==6.0.1
@@ -149,7 +149,7 @@ typing_extensions==4.10.0
 tyro==0.7.3
 tzdata==2024.1
 urllib3==2.2.1
-wandb==0.16.3
+wandb==0.16.4
 wasabi==1.1.2
 wcwidth==0.2.13
 weasel==0.3.4
