The list of downloaded packages has been updated (requirements.txt)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.27.2
+accelerate==0.28.0
 adapter-transformers==3.2.1.post0
 aiohttp==3.9.3
 aiosignal==1.3.1
@@ -8,10 +8,10 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.59
+awscli==1.32.64
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.59
+botocore==1.34.64
 catalogue==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -22,20 +22,20 @@ colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5a0
 contourpy==1.2.0
-coverage==7.4.3
+coverage==7.4.4
 cycler==0.12.1
 cymem==2.0.8
 datasets==2.18.0
 dill==0.3.8
 docker-pycreds==0.4.0
-docstring-parser==0.15
+docstring_parser==0.16
 docutils==0.20.1
 evaluate==0.4.1
 filelock==3.13.1
 flake8==7.0.0
-fonttools==4.49.0
+fonttools==4.50.0
 frozenlist==1.4.1
-fsspec==2024.2.0
+fsspec==2024.3.0
 gitdb==4.0.11
 GitPython==3.1.42
 huggingface-hub==0.21.4
@@ -60,7 +60,7 @@ multiprocess==0.70.16
 murmurhash==1.0.10
 networkx==3.2.1
 nltk==3.8.1
-numpy==1.26.4
+numpy==2.0.0b1
 nvidia-cublas-cu11==11.11.3.6
 nvidia-cublas-cu12==12.4.2.65
 nvidia-cuda-cupti-cu12==12.4.99
@@ -86,13 +86,13 @@ peft==0.9.0
 pillow==10.2.0
 preshed==4.0.0
 prettytable==3.10.0
-protobuf==5.26.0rc3
+protobuf==5.26.0
 psutil==5.9.8
 pyarrow==15.0.1
 pyarrow-hotfix==0.6
 pyasn1==0.5.1
 pycodestyle==2.11.1
-pydantic==2.6.3
+pydantic==2.6.4
 pydantic_core==2.16.3
 pyflakes==3.2.0
 Pygments==2.17.2
@@ -108,12 +108,12 @@ requests==2.31.0
 responses==0.25.0
 rich==13.7.1
 rsa==4.9
-s3transfer==0.10.0
+s3transfer==0.10.1
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 sentencepiece==0.2.0
-sentry-sdk==2.0.0a2
+sentry-sdk==2.0.0rc2
 setproctitle==1.3.3
 shtab==1.7.1
 six==1.16.0
