--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,16 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.64
+awscli==1.32.69
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.64
+botocore==1.34.69
 catalogue==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
-cmake==3.28.3
+cmake==3.28.4
 colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5a0
@@ -35,10 +35,10 @@ filelock==3.13.1
 flake8==7.0.0
 fonttools==4.50.0
 frozenlist==1.4.1
-fsspec==2024.3.0
+fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.42
-huggingface-hub==0.21.4
+huggingface-hub==0.22.0rc0
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.6
@@ -48,7 +48,7 @@ jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
 langcodes==3.3.0
-lightning-utilities==0.10.1
+lightning-utilities==0.11.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
@@ -82,18 +82,18 @@ optimum==1.17.1
 packaging==24.0
 pandas==2.2.1
 pathtools==0.1.2
-peft==0.9.0
+peft==0.10.0
 pillow==10.2.0
 preshed==4.0.0
 prettytable==3.10.0
 protobuf==5.26.0
 psutil==5.9.8
-pyarrow==15.0.1
+pyarrow==15.0.2
 pyarrow-hotfix==0.6
 pyasn1==0.5.1
 pycodestyle==2.11.1
 pydantic==2.6.4
-pydantic_core==2.16.3
+pydantic_core==2.17.0
 pyflakes==3.2.0
 Pygments==2.17.2
 pyparsing==3.1.2
@@ -111,14 +111,14 @@ rsa==4.9
 s3transfer==0.10.1
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
-scipy==1.12.0
+scipy==1.13.0rc1
 sentencepiece==0.2.0
-sentry-sdk==2.0.0rc2
+sentry-sdk==2.0.0rc3
 setproctitle==1.3.3
 shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
-smart-open==7.0.1
+smart-open==7.0.3
 smmap==6.0.0
 snowballstemmer==2.2.0
 spacy==4.0.0.dev2
@@ -134,16 +134,16 @@ sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12
 thinc==9.0.0.dev4
-threadpoolctl==3.3.0
+threadpoolctl==3.4.0
 tokenizers==0.15.2
 torch==2.2.1
 torch-nested==0.0.5
-torchmetrics==1.3.1
+torchmetrics==1.3.2
 torchvision==0.17.1
 tqdm==4.66.2
-transformers==4.38.2
+transformers==4.39.1
 triton==2.2.0
-trl==0.7.11
+trl==0.8.1
 typer==0.9.0
 typing_extensions==4.10.0
 tyro==0.7.3
