--- a/requirements.txt
+++ b/requirements.txt
@@ -31,14 +31,14 @@ docker-pycreds==0.4.0
 docstring_parser==0.16
 docutils==0.20.1
 evaluate==0.4.1
-filelock==3.13.1
+filelock==3.13.3
 flake8==7.0.0
 fonttools==4.50.0
 frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.42
-huggingface-hub==0.22.0rc0
+huggingface-hub==0.22.0
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.6
@@ -48,7 +48,7 @@ jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
 langcodes==3.3.0
-lightning-utilities==0.11.0
+lightning-utilities==0.11.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
@@ -78,7 +78,7 @@ nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.4.99
 omegaconf==2.4.0.dev3
-optimum==1.17.1
+optimum==1.18.0
 packaging==24.0
 pandas==2.2.1
 pathtools==0.1.2
@@ -144,12 +144,12 @@ tqdm==4.66.2
 transformers==4.39.1
 triton==2.2.0
 trl==0.8.1
-typer==0.9.0
-typing_extensions==4.10.0
+typer==0.10.0
+typing_extensions==4.11.0rc1
 tyro==0.7.3
 tzdata==2024.1
 urllib3==2.2.1
-wandb==0.16.4
+wandb==0.16.5
 wasabi==1.1.2
 wcwidth==0.2.13
 weasel==0.3.4
