--- a/requirements.txt
+++ b/requirements.txt
@@ -8,20 +8,20 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.69
+awscli==1.32.75
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.69
+botocore==1.34.75
 catalogue==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
-cmake==3.28.4
+cmake==3.29.0.1
 colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5a0
-contourpy==1.2.0
+contourpy==1.2.1rc1
 coverage==7.4.4
 cycler==0.12.1
 cymem==2.0.8
@@ -29,7 +29,7 @@ datasets==2.18.0
 dill==0.3.8
 docker-pycreds==0.4.0
 docstring_parser==0.16
-docutils==0.20.1
+docutils==0.21rc1
 evaluate==0.4.1
 filelock==3.13.3
 flake8==7.0.0
@@ -37,8 +37,8 @@ fonttools==4.50.0
 frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
-GitPython==3.1.42
-huggingface-hub==0.22.0
+GitPython==3.1.43
+huggingface-hub==0.22.2
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.6
@@ -48,7 +48,7 @@ jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
 langcodes==3.3.0
-lightning-utilities==0.11.1
+lightning-utilities==0.11.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
@@ -60,7 +60,7 @@ multiprocess==0.70.16
 murmurhash==1.0.10
 networkx==3.3rc0
 nltk==3.8.1
-numpy==2.0.0b1
+numpy==2.0.0rc1
 nvidia-cublas-cu11==11.11.3.6
 nvidia-cublas-cu12==12.4.2.65
 nvidia-cuda-cupti-cu12==12.4.99
@@ -68,8 +68,8 @@ nvidia-cuda-nvrtc-cu11==11.8.89
 nvidia-cuda-nvrtc-cu12==12.4.99
 nvidia-cuda-runtime-cu11==11.8.89
 nvidia-cuda-runtime-cu12==12.4.99
-nvidia-cudnn-cu11==8.9.6.50
-nvidia-cudnn-cu12==8.9.7.29
+nvidia-cudnn-cu11==9.0.0.312
+nvidia-cudnn-cu12==9.0.0.312
 nvidia-cufft-cu12==11.2.0.44
 nvidia-curand-cu12==10.3.5.119
 nvidia-cusolver-cu12==11.6.0.99
@@ -83,14 +83,14 @@ packaging==24.0
 pandas==2.2.1
 pathtools==0.1.2
 peft==0.10.0
-pillow==10.2.0
+pillow==10.3.0
 preshed==4.0.0
 prettytable==3.10.0
-protobuf==5.26.0
+protobuf==5.26.1
 psutil==5.9.8
 pyarrow==15.0.2
 pyarrow-hotfix==0.6
-pyasn1==0.5.1
+pyasn1==0.6.0
 pycodestyle==2.11.1
 pydantic==2.6.4
 pydantic_core==2.17.0
@@ -115,10 +115,11 @@ scipy==1.13.0rc1
 sentencepiece==0.2.0
 sentry-sdk==2.0.0rc3
 setproctitle==1.3.3
+shellingham==1.5.4
 shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
-smart-open==7.0.3
+smart-open==7.0.4
 smmap==6.0.0
 snowballstemmer==2.2.0
 spacy==4.0.0.dev2
@@ -132,19 +133,21 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
-sympy==1.12
+sympy==1.12.1rc1
 thinc==9.0.0.dev4
 threadpoolctl==3.4.0
 tokenizers==0.15.2
-torch==2.2.1
+torch==2.2.2
 torch-nested==0.0.5
 torchmetrics==1.3.2
-torchvision==0.17.1
+torchvision==0.17.2
 tqdm==4.66.2
-transformers==4.39.1
+transformers==4.39.2
 triton==2.2.0
 trl==0.8.1
-typer==0.10.0
+typer==0.12.0
+typer-cli==0.12.0
+typer-slim==0.12.0
 typing_extensions==4.11.0rc1
 tyro==0.7.3
 tzdata==2024.1
