--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.28.0
+accelerate==0.29.1
 adapter-transformers==3.2.1.post0
 aiohttp==3.9.3
 aiosignal==1.3.1
@@ -8,10 +8,10 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.75
+awscli==1.32.79
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.75
+botocore==1.34.79
 catalogue==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -21,7 +21,7 @@ cmake==3.29.0.1
 colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5a0
-contourpy==1.2.1rc1
+contourpy==1.2.1
 coverage==7.4.4
 cycler==0.12.1
 cymem==2.0.8
@@ -33,7 +33,7 @@ docutils==0.21rc1
 evaluate==0.4.1
 filelock==3.13.3
 flake8==7.0.0
-fonttools==4.50.0
+fonttools==4.51.0
 frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
@@ -51,7 +51,7 @@ langcodes==3.3.0
 lightning-utilities==0.11.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.8.3
+matplotlib==3.8.4
 mccabe==0.7.0
 mdurl==0.1.2
 mpmath==1.4.0a0
@@ -62,21 +62,21 @@ networkx==3.3rc0
 nltk==3.8.1
 numpy==2.0.0rc1
 nvidia-cublas-cu11==11.11.3.6
-nvidia-cublas-cu12==12.4.2.65
-nvidia-cuda-cupti-cu12==12.4.99
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu11==11.8.89
-nvidia-cuda-nvrtc-cu12==12.4.99
+nvidia-cuda-nvrtc-cu12==12.4.127
 nvidia-cuda-runtime-cu11==11.8.89
-nvidia-cuda-runtime-cu12==12.4.99
+nvidia-cuda-runtime-cu12==12.4.127
 nvidia-cudnn-cu11==9.0.0.312
 nvidia-cudnn-cu12==9.0.0.312
-nvidia-cufft-cu12==11.2.0.44
-nvidia-curand-cu12==10.3.5.119
-nvidia-cusolver-cu12==11.6.0.99
-nvidia-cusparse-cu12==12.3.0.142
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.4.99
-nvidia-nvtx-cu12==12.4.99
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 omegaconf==2.4.0.dev3
 optimum==1.18.0
 packaging==24.0
@@ -92,8 +92,8 @@ pyarrow==15.0.2
 pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pycodestyle==2.11.1
-pydantic==2.6.4
-pydantic_core==2.17.0
+pydantic==2.7.0b1
+pydantic_core==2.18.0
 pyflakes==3.2.0
 Pygments==2.17.2
 pyparsing==3.1.2
@@ -111,9 +111,9 @@ rsa==4.9
 s3transfer==0.10.1
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
-scipy==1.13.0rc1
+scipy==1.13.0
 sentencepiece==0.2.0
-sentry-sdk==2.0.0rc3
+sentry-sdk==2.0.0rc4
 setproctitle==1.3.3
 shellingham==1.5.4
 shtab==1.7.1
@@ -143,19 +143,19 @@ torchmetrics==1.3.2
 torchvision==0.17.2
 tqdm==4.66.2
 transformers==4.39.3
-triton==2.2.0
+triton==2.3.0
 trl==0.8.1
-typer==0.12.0
-typer-cli==0.12.0
-typer-slim==0.12.0
-typing_extensions==4.11.0rc1
-tyro==0.7.3
+typer==0.12.1
+typer-cli==0.12.1
+typer-slim==0.12.1
+typing_extensions==4.11.0
+tyro==0.8.1
 tzdata==2024.1
 urllib3==2.2.1
-wandb==0.16.5
+wandb==0.16.6
 wasabi==1.1.2
 wcwidth==0.2.13
-weasel==0.3.4
+weasel==0.4.0
 wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
