--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.29.1
+accelerate==0.29.2
 adapter-transformers==3.2.1.post0
 aiohttp==3.9.3
 aiosignal==1.3.1
@@ -8,10 +8,10 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.79
+awscli==1.32.81
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.79
+botocore==1.34.81
 catalogue==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -29,9 +29,9 @@ datasets==2.18.0
 dill==0.3.8
 docker-pycreds==0.4.0
 docstring_parser==0.16
-docutils==0.21rc1
+docutils==0.21
 evaluate==0.4.1
-filelock==3.13.3
+filelock==3.13.4
 flake8==7.0.0
 fonttools==4.51.0
 frozenlist==1.4.1
@@ -45,13 +45,13 @@ idna==3.6
 imagesize==1.4.1
 Jinja2==3.1.3
 jmespath==1.0.1
-joblib==1.3.2
+joblib==1.4.0
 kiwisolver==1.4.5
 langcodes==3.3.0
 lightning-utilities==0.11.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.8.4
+matplotlib==3.9.0rc2
 mccabe==0.7.0
 mdurl==0.1.2
 mpmath==1.4.0a0
@@ -78,7 +78,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 omegaconf==2.4.0.dev3
-optimum==1.18.0
+optimum==1.18.1
 packaging==24.0
 pandas==2.2.1
 pathtools==0.1.2
@@ -110,7 +110,7 @@ rich==13.7.1
 rsa==4.9
 s3transfer==0.10.1
 safetensors==0.4.2
-scikit-learn==1.4.1.post1
+scikit-learn==1.4.2
 scipy==1.13.0
 sentencepiece==0.2.0
 sentry-sdk==2.0.0rc4
@@ -134,7 +134,7 @@ sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12.1rc1
-thinc==9.0.0.dev4
+thinc==9.0.0.dev5
 threadpoolctl==3.4.0
 tokenizers==0.15.2
 torch==2.2.2
@@ -145,11 +145,11 @@ tqdm==4.66.2
 transformers==4.39.3
 triton==2.3.0
 trl==0.8.1
-typer==0.12.1
-typer-cli==0.12.1
-typer-slim==0.12.1
+typer==0.12.3
+typer-cli==0.12.3
+typer-slim==0.12.3
 typing_extensions==4.11.0
-tyro==0.8.2
+tyro==0.8.3
 tzdata==2024.1
 urllib3==2.2.1
 wandb==0.16.6
