--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.82
+awscli==1.32.83
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.82
+botocore==1.34.83
 catalogue==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -29,7 +29,7 @@ datasets==2.18.0
 dill==0.3.8
 docker-pycreds==0.4.0
 docstring_parser==0.16
-docutils==0.21
+docutils==0.21.1
 evaluate==0.4.1
 filelock==3.13.4
 flake8==7.0.0
@@ -41,7 +41,7 @@ GitPython==3.1.43
 huggingface-hub==0.22.2
 humanfriendly==10.0
 hydra-core==1.3.2
-idna==3.6
+idna==3.7
 imagesize==1.4.1
 Jinja2==3.1.3
 jmespath==1.0.1
@@ -92,8 +92,8 @@ pyarrow==15.0.2
 pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pycodestyle==2.11.1
-pydantic==2.7.0b1
-pydantic_core==2.18.0
+pydantic==2.7.0
+pydantic_core==2.18.1
 pyflakes==3.2.0
 Pygments==2.17.2
 pyparsing==3.1.2
@@ -144,7 +144,7 @@ torchvision==0.17.2
 tqdm==4.66.2
 transformers==4.39.3
 triton==2.3.0
-trl==0.8.1
+trl==0.8.2
 typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
