--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
-accelerate==0.29.2
+accelerate==0.29.3
 adapter-transformers==3.2.1.post0
-aiohttp==3.9.3
+aiohttp==3.9.5
 aiosignal==1.3.1
 alabaster==0.7.16
 alipy==1.2.5
 annotated-types==0.6.0
-antlr4-python3-runtime==4.13.1
+antlr4-python3-runtime==4.9.3
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.83
+awscli==1.32.88
 Babel==2.14.0
 blis==0.7.11
-botocore==1.34.84
-catalogue==2.1.0
+botocore==1.34.88
+catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.18.1
+cloudpathlib==0.16.0
 cmake==3.29.2
-colorama==0.4.6
+colorama==0.4.4
 coloredlogs==15.0.1
-confection==0.1.5a0
+confection==0.1.4
 contourpy==1.2.1
 coverage==7.4.4
 cycler==0.12.1
 cymem==2.0.8
-datasets==2.18.0
-dill==0.3.8
+datasets==2.13.2
+dill==0.3.6
 docker-pycreds==0.4.0
 docstring_parser==0.16
-docutils==0.21.1
+docutils==0.16
 evaluate==0.4.1
 filelock==3.13.4
 flake8==7.0.0
@@ -38,7 +38,7 @@ frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
-huggingface-hub==0.22.2
+huggingface-hub==0.13.4
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.7
@@ -51,42 +51,42 @@ langcodes==3.3.0
 lightning-utilities==0.11.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.0rc2
+matplotlib==3.8.4
 mccabe==0.7.0
 mdurl==0.1.2
-mpmath==1.4.0a0
+mpmath==1.3.0
 multidict==6.0.5
-multiprocess==0.70.16
+multiprocess==0.70.14
 murmurhash==1.0.10
 networkx==3.3
 nltk==3.8.1
-numpy==2.0.0rc1
+numpy==1.26.4
 nvidia-cublas-cu11==11.11.3.6
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu11==11.8.89
-nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu11==11.8.89
-nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.1.105
 nvidia-cudnn-cu11==9.0.0.312
-nvidia-cudnn-cu12==9.0.0.312
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-omegaconf==2.4.0.dev3
-optimum==1.18.1
+nvidia-nvtx-cu12==12.1.105
+omegaconf==2.3.0
+optimum==1.19.0
 packaging==24.0
 pandas==2.2.2
 pathtools==0.1.2
-peft==0.10.0
+peft==0.6.2
 pillow==10.3.0
-preshed==4.0.0
+preshed==3.0.9
 prettytable==3.10.0
-protobuf==5.26.1
+protobuf==3.20.2
 psutil==5.9.8
 pyarrow==15.0.2
 pyarrow-hotfix==0.6
@@ -103,29 +103,29 @@ pytorch-lightning==2.2.2
 pytorch-triton==0.0.1
 pytz==2024.1
 PyYAML==6.0.1
-regex==2023.12.25
+regex==2024.4.16
 requests==2.31.0
-responses==0.25.0
+responses==0.18.0
 rich==13.7.1
-rsa==4.9
+rsa==4.7.2
 s3transfer==0.10.1
-safetensors==0.4.2
+safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
 sentencepiece==0.2.0
-sentry-sdk==2.0.0rc5
+sentry-sdk==1.45.0
 setproctitle==1.3.3
 shellingham==1.5.4
 shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
-smart-open==7.0.4
-smmap==6.0.0
+smart-open==6.4.0
+smmap==5.0.1
 snowballstemmer==2.2.0
-spacy==4.0.0.dev2
-spacy-legacy==4.0.0.dev1
+spacy==3.7.4
+spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-Sphinx==7.2.6
+Sphinx==5.3.0
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
@@ -133,21 +133,21 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
-sympy==1.12.1rc1
-thinc==9.0.0.dev5
+sympy==1.12
+thinc==8.2.3
 threadpoolctl==3.4.0
-tokenizers==0.15.2
+tokenizers==0.13.3
 torch==2.2.2
 torch-nested==0.0.5
 torchmetrics==1.3.2
 torchvision==0.17.2
 tqdm==4.66.2
-transformers==4.39.3
-triton==2.3.0
-trl==0.8.3
-typer==0.12.3
-typer-cli==0.12.3
-typer-slim==0.12.3
+transformers==4.29.0
+triton==2.2.0
+trl==0.7.4
+typer==0.9.4
+typer-cli==0.12.0
+typer-slim==0.12.0
 typing_extensions==4.11.0
 tyro==0.8.3
 tzdata==2024.1
@@ -155,7 +155,7 @@ urllib3==2.2.1
 wandb==0.16.6
 wasabi==1.1.2
 wcwidth==0.2.13
-weasel==0.4.0
+weasel==0.3.4
 wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
