--- a/requirements.txt
+++ b/requirements.txt
@@ -5,31 +5,31 @@ aiosignal==1.3.1
 alabaster==0.7.16
 alipy==1.2.5
 annotated-types==0.6.0
-antlr4-python3-runtime==4.9.3
+antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 attrs==23.2.0
-awscli==1.32.88
+awscli==1.32.91
 Babel==2.14.0
-blis==0.7.11
-botocore==1.34.88
+blis==0.9.1
+botocore==1.34.91
 catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.16.0
+cloudpathlib==0.18.1
 cmake==3.29.2
-colorama==0.4.4
+colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.4
 contourpy==1.2.1
-coverage==7.4.4
+coverage==7.5.0
 cycler==0.12.1
 cymem==2.0.8
-datasets==2.13.2
-dill==0.3.6
+datasets==2.19.0
+dill==0.3.8
 docker-pycreds==0.4.0
 docstring_parser==0.16
-docutils==0.16
+docutils==0.21.2
 evaluate==0.4.1
 filelock==3.13.4
 flake8==7.0.0
@@ -38,7 +38,7 @@ frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
-huggingface-hub==0.13.4
+huggingface-hub==0.22.2
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.7
@@ -47,8 +47,10 @@ Jinja2==3.1.3
 jmespath==1.0.1
 joblib==1.4.0
 kiwisolver==1.4.5
-langcodes==3.3.0
+langcodes==3.4.0
+language_data==1.2.0
 lightning-utilities==0.11.2
+marisa-trie==1.1.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
@@ -56,76 +58,77 @@ mccabe==0.7.0
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.5
-multiprocess==0.70.14
+multiprocess==0.70.16
 murmurhash==1.0.10
 networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
 nvidia-cublas-cu11==11.11.3.6
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu11==11.8.89
-nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.4.127
 nvidia-cuda-runtime-cu11==11.8.89
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==9.0.0.312
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu11==9.1.0.70
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.1.105
+nvidia-nvtx-cu12==12.4.127
 omegaconf==2.3.0
-optimum==1.19.0
+optimum==1.19.1
 packaging==24.0
 pandas==2.2.2
 pathtools==0.1.2
-peft==0.6.2
+peft==0.10.0
 pillow==10.3.0
+pip-review==1.3.0
 preshed==3.0.9
 prettytable==3.10.0
-protobuf==3.20.2
+protobuf==5.26.1
 psutil==5.9.8
-pyarrow==15.0.2
+pyarrow==16.0.0
 pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pycodestyle==2.11.1
-pydantic==2.7.0
-pydantic_core==2.18.1
+pydantic==2.7.1
+pydantic_core==2.18.2
 pyflakes==3.2.0
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytorch-lightning==2.2.2
+pytorch-lightning==2.2.3
 pytorch-triton==0.0.1
 pytz==2024.1
 PyYAML==6.0.1
 regex==2024.4.16
 requests==2.31.0
-responses==0.18.0
+responses==0.25.0
 rich==13.7.1
-rsa==4.7.2
+rsa==4.9
 s3transfer==0.10.1
 safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
 sentencepiece==0.2.0
-sentry-sdk==1.45.0
+sentry-sdk==2.0.0
 setproctitle==1.3.3
 shellingham==1.5.4
 shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
-smart-open==6.4.0
+smart-open==7.0.4
 smmap==5.0.1
 snowballstemmer==2.2.0
 spacy==3.7.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-Sphinx==5.3.0
+Sphinx==7.3.7
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
@@ -134,20 +137,20 @@ sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12
-thinc==8.2.3
+thinc==9.0.0
 threadpoolctl==3.4.0
-tokenizers==0.13.3
-torch==2.2.2
+tokenizers==0.19.1
+torch==2.3.0
 torch-nested==0.0.5
 torchmetrics==1.3.2
-torchvision==0.17.2
+torchvision==0.18.0
 tqdm==4.66.2
-transformers==4.29.0
-triton==2.2.0
-trl==0.7.4
-typer==0.9.4
-typer-cli==0.12.0
-typer-slim==0.12.0
+transformers==4.40.1
+triton==2.3.0
+trl==0.8.6
+typer==0.12.3
+typer-cli==0.12.3
+typer-slim==0.12.3
 typing_extensions==4.11.0
 tyro==0.8.3
 tzdata==2024.1
@@ -155,7 +158,7 @@ urllib3==2.2.1
 wandb==0.16.6
 wasabi==1.1.2
 wcwidth==0.2.13
-weasel==0.3.4
+weasel==0.4.0
 wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
