--- a/requirements.txt
+++ b/requirements.txt
@@ -1,116 +1,197 @@
-accelerate==0.29.3
-adapter-transformers==3.2.1.post0
-aiohttp==3.9.5
+accelerate==0.30.0
+aiohttp==3.9.3
+aiohttp_socks==0.8.4
+aiorpcX==0.23.1
 aiosignal==1.3.1
 alabaster==0.7.16
 alipy==1.2.5
 annotated-types==0.6.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
-attrs==23.2.0
-awscli==1.32.93
+application-utility==1.3.2
+apsw==3.45.3.0
+async-timeout==4.0.3
+attrs==23.2.1.dev0
+awscli==1.32.98
 Babel==2.14.0
-blis==0.9.1
-botocore==1.34.93
+beautifulsoup4==4.13.0b2
+bitarray==2.9.2
+bitstring==4.2.1
+blis==0.7.11
+botocore==1.34.98
+Brotli==1.1.0
+brotlicffi==1.1.0.0
+btchip-python==0.1.32
+btrfsutil==6.8
 catalogue==2.0.10
 certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.18.1
+cloudpathlib==0.16.0
 cmake==3.29.2
 colorama==0.4.6
 coloredlogs==15.0.1
-confection==0.1.4
+confection==0.1.5a0
 contourpy==1.2.1
-coverage==7.5.0
+coverage==7.5.1
+cryptography==42.0.5
+css-parser==1.0.10
+cssselect==1.2.0
+cupshelpers==1.0
 cycler==0.12.1
 cymem==2.0.8
 datasets==2.19.0
+dbus-python==1.3.2
 dill==0.3.8
+dnspython==2.5.0
 docker-pycreds==0.4.0
+docopt==0.6.2
 docstring_parser==0.16
-docutils==0.21.2
-evaluate==0.4.1
-filelock==3.13.4
+docutils==0.16
+ecdsa==0.18.0
+Electrum==4.5.4
+evaluate==0.4.2
+faust-cchardet==2.1.19
+feedparser==6.0.11
+filelock==3.14.0
 flake8==7.0.0
 fonttools==4.51.0
 frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
+helpdev==0.7.1
+hidapi==0.14.0
+html2text==2020.1.16
+html5-parser==0.4.12
+html5lib==1.1
 huggingface-hub==0.22.2
 humanfriendly==10.0
 hydra-core==1.3.2
-idna==3.7
+idna==3.6
+ifaddr==0.2.0
 imagesize==1.4.1
+importlib_metadata==5.1.0
+inflate64==1.0.0
+jeepney==0.8.0
 Jinja2==3.1.3
 jmespath==1.0.1
 joblib==1.4.0
+jsonpatch==1.33
+jsonpointer==2.4
+jsonrpclib-pelix==0.4.3.2
+keyutils==0.6
 kiwisolver==1.4.5
 langcodes==3.4.0
 language_data==1.2.0
+lensfun==0.3.4
+libfdt==1.7.0
+libtorrent==2.0.10
 lightning-utilities==0.11.2
+lit==17.0.6.dev0
+lxml==5.1.0
 marisa-trie==1.1.0
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.8.4
+matplotlib==3.8.3
 mccabe==0.7.0
 mdurl==0.1.2
-mpmath==1.3.0
+mechanize==0.4.10
+mpmath==1.4.0a1
+msgpack==1.0.5
 multidict==6.0.5
 multiprocess==0.70.16
+multivolumefile==0.2.3
 murmurhash==1.0.10
+netifaces==0.11.0
+netsnmp-python==1.0a1
 networkx==3.3
+nftables==0.1
 nltk==3.8.1
-numpy==1.26.4
-nvidia-cublas-cu11==11.11.3.6
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu11==11.8.89
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu11==11.8.89
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu11==9.1.0.70
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
+npyscreen==4.10.5
+numpy==2.0.0rc1
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
 omegaconf==2.3.0
 optimum==1.19.1
-packaging==24.0
+packaging==23.2
+pacman_mirrors==4.24.0
 pandas==2.2.2
-pathtools==0.1.2
+pbkdf2==1.3
+pdftotext==2.2.2
 peft==0.10.0
 pillow==10.3.0
+pinecone-client==3.2.2
 pip-review==1.3.0
+platformdirs==4.2.1
+plumbum==1.8.2
+ply==3.11
 preshed==3.0.9
 prettytable==3.10.0
-protobuf==5.26.1
+protobuf==4.25.3
 psutil==5.9.8
+py7zr==0.21.0
+pyaes==1.6.1
 pyarrow==16.0.0
 pyarrow-hotfix==0.6
 pyasn1==0.6.0
+pybcj==1.0.2
+pycairo==1.26.0
+pychm==0.8.6
 pycodestyle==2.11.1
+pycparser==2.22
+pycryptodome==3.20.0
+pycryptodomex==3.12.0
+pycups==2.0.4
+pycurl==7.45.2
 pydantic==2.7.1
 pydantic_core==2.18.2
 pyflakes==3.2.0
-Pygments==2.17.2
+Pygments==2.18.0
+PyGObject==3.48.2
 pyparsing==3.1.2
-python-dateutil==2.9.0.post0
+pypng==0.20231004.0
+pyppmd==1.1.0
+PyQt5==5.15.10
+PyQt5_sip==12.13.0
+PyQt6==6.7.0
+PyQt6-WebEngine==6.7.0
+PyQt6_sip==13.6.0
+PySide6==6.7.0
+pysmbc==1.0.25.1
+PySocks==1.7.1
+python-dateutil==2.9.0
 python-dotenv==1.0.1
+python-socks==2.4.4
 pytorch-lightning==2.2.3
 pytorch-triton==0.0.1
 pytz==2024.1
+pyxdg==0.28
 PyYAML==6.0.1
+pyzstd==0.15.10
+QDarkStyle==3.2.3
+qrcode==7.4.2
+QtPy==2.4.1
 regex==2024.4.16
+reportlab==4.1.0
 requests==2.31.0
 responses==0.25.0
 rich==13.7.1
-rsa==4.9
+rpyc==6.0.0
+rsa==4.7.2
 s3transfer==0.10.1
 safetensors==0.4.3
 scikit-learn==1.4.2
@@ -118,15 +199,21 @@ scipy==1.13.0
 sentencepiece==0.2.0
 sentry-sdk==2.0.1
 setproctitle==1.3.3
+setuptools==69.5.1
+sgmllib3k==1.0.0
 shellingham==1.5.4
+shiboken6==6.7.0
+shiboken6-generator==6.7.0
 shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
-smart-open==7.0.4
+smart-open==6.4.0
+smbus==1.1
 smmap==5.0.1
 snowballstemmer==2.2.0
-spacy==3.7.4
-spacy-legacy==3.0.12
+soupsieve==2.5
+spacy==4.0.0.dev3
+spacy-legacy==4.0.0.dev1
 spacy-loggers==1.0.5
 Sphinx==7.3.7
 sphinxcontrib-applehelp==1.0.8
@@ -137,28 +224,38 @@ sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12
+systemd-python==235
+texttable==1.7.0
 thinc==9.0.0
-threadpoolctl==3.4.0
+threadpoolctl==3.5.0
 tokenizers==0.19.1
 torch==2.3.0
 torch-nested==0.0.5
 torchmetrics==1.3.2
 torchvision==0.18.0
-tqdm==4.66.2
+tqdm==4.66.4
 transformers==4.40.1
 triton==2.3.0
 trl==0.8.6
-typer==0.12.3
+typer==0.9.4
 typer-cli==0.12.3
 typer-slim==0.12.3
 typing_extensions==4.11.0
 tyro==0.8.3
 tzdata==2024.1
+udiskie==2.5.3
+unrardll==0.1.7
 urllib3==2.2.1
-wandb==0.16.6
+vboxapi==1.0
+wandb==0.17.0rc2
 wasabi==1.1.2
 wcwidth==0.2.13
-weasel==0.4.0
+weasel==0.3.4
+webencodings==0.5.1
+websocket-client==1.8.0
+wheel==0.43.0
 wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
+zeroconf==0.132.2
+zipp==3.18.1
