--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.2
 blis==0.7.11
-botocore==1.34.106
+botocore==1.34.108
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -49,7 +49,7 @@ dnspython==2.6.1
 docker-pycreds==0.4.0
 docopt==0.6.2
 docstring_parser==0.16
-docutils==0.16
+docutils==0.21.2
 ecdsa==0.19.0
 Electrum==4.5.4
 evaluate==0.4.2
@@ -90,13 +90,13 @@ lensfun==0.3.4
 libfdt==1.7.0
 libtorrent==2.0.10
 lightning-utilities==0.11.2
-lit==18.1.4
+lit==18.1.6
 lxml==5.2.2
 marisa-trie==1.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.0rc2
+matplotlib==3.9.0
 mccabe==0.7.0
 mdurl==0.1.2
 mechanize==0.4.10
@@ -132,7 +132,7 @@ pacman_mirrors==4.24.0
 pandas==2.2.2
 pbkdf2==1.3
 pdftotext==2.2.2
-peft==0.10.0
+peft==0.11.1
 pillow==10.3.0
 pinecone-client==4.1.0
 pip-review==1.3.0
@@ -192,13 +192,13 @@ requests==2.31.0
 responses==0.25.0
 rich==13.7.1
 rpyc==6.0.0
-rsa==4.7.2
+rsa==4.9
 s3transfer==0.10.1
 safetensors==0.4.3
 scikit-learn==1.5.0rc1
 scipy==1.13.0
 sentencepiece==0.2.0
-sentry-sdk==2.1.1
+sentry-sdk==2.2.0
 setproctitle==1.3.3
 setuptools==69.5.1
 sgmllib3k==1.0.0
@@ -235,7 +235,7 @@ torch-nested==0.0.5
 torchmetrics==1.4.0.post0
 torchvision==0.18.0
 tqdm==4.66.4
-transformers==4.40.2
+transformers==4.41.0
 triton==2.3.0
 trl==0.8.6
 typer==0.12.3
@@ -259,4 +259,4 @@ wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
 zeroconf==0.132.2
-zipp==3.18.1
+zipp==3.18.2
